logs/dag_id=weather/run_id=manual__2023-06-05T17:34:13.051641+00:00/task_id=create_table_weather/attempt=5.log
[2023-06-05T17:57:24.338+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather.create_table_weather manual__2023-06-05T17:34:13.051641+00:00 [queued]>
[2023-06-05T17:57:24.355+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather.create_table_weather manual__2023-06-05T17:34:13.051641+00:00 [queued]>
[2023-06-05T17:57:24.356+0000] {taskinstance.py:1282} INFO - 
--------------------------------------------------------------------------------
[2023-06-05T17:57:24.356+0000] {taskinstance.py:1283} INFO - Starting attempt 5 of 10
[2023-06-05T17:57:24.356+0000] {taskinstance.py:1284} INFO - 
--------------------------------------------------------------------------------
[2023-06-05T17:57:24.381+0000] {taskinstance.py:1303} INFO - Executing <Task(PostgresOperator): create_table_weather> on 2023-06-05 17:34:13.051641+00:00
[2023-06-05T17:57:24.386+0000] {standard_task_runner.py:55} INFO - Started process 12421 to run task
[2023-06-05T17:57:24.394+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather', 'create_table_weather', 'manual__2023-06-05T17:34:13.051641+00:00', '--job-id', '767', '--raw', '--subdir', 'DAGS_FOLDER/weather_DAG.py', '--cfg-path', '/tmp/tmp_b44hp1y']
[2023-06-05T17:57:24.396+0000] {standard_task_runner.py:83} INFO - Job 767: Subtask create_table_weather
[2023-06-05T17:57:24.476+0000] {task_command.py:388} INFO - Running <TaskInstance: weather.create_table_weather manual__2023-06-05T17:34:13.051641+00:00 [running]> on host 05172cfd5782
[2023-06-05T17:57:24.585+0000] {taskinstance.py:1511} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=fox
AIRFLOW_CTX_DAG_ID=weather
AIRFLOW_CTX_TASK_ID=create_table_weather
AIRFLOW_CTX_EXECUTION_DATE=2023-06-05T17:34:13.051641+00:00
AIRFLOW_CTX_TRY_NUMBER=5
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-06-05T17:34:13.051641+00:00
[2023-06-05T17:57:24.586+0000] {sql.py:254} INFO - Executing: 
                CREATE TABLE IF NOT EXISTS weather_data (
                    date VARCHAR(200),
                    current_temperature(C) VARCHAR(200),
                    feels_like(C) VARCHAR(200),
                    sky VARCHAR(200),
                    chance_of_precipitation(%) VARCHAR(200),
                    wind(mps) VARCHAR(200), 
                    pressure(mm) VARCHAR(200), 
                    uv_index VARCHAR(200), 
                    humidity(%) VARCHAR(200), 
                    precipitation(mm) VARCHAR(200)
            )
            
[2023-06-05T17:57:24.599+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-06-05T17:57:24.987+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-06-05T17:57:24.993+0000] {sql.py:375} INFO - Running statement: 
                CREATE TABLE IF NOT EXISTS weather_data (
                    date VARCHAR(200),
                    current_temperature(C) VARCHAR(200),
                    feels_like(C) VARCHAR(200),
                    sky VARCHAR(200),
                    chance_of_precipitation(%) VARCHAR(200),
                    wind(mps) VARCHAR(200), 
                    pressure(mm) VARCHAR(200), 
                    uv_index VARCHAR(200), 
                    humidity(%) VARCHAR(200), 
                    precipitation(mm) VARCHAR(200)
            )
            , parameters: None
[2023-06-05T17:57:24.995+0000] {taskinstance.py:1775} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 4:                     current_temperature(C) VARCHAR(200),
                                               ^

[2023-06-05T17:57:25.007+0000] {taskinstance.py:1326} INFO - Marking task as UP_FOR_RETRY. dag_id=weather, task_id=create_table_weather, execution_date=20230605T173413, start_date=20230605T175724, end_date=20230605T175725
[2023-06-05T17:57:25.028+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 767 for task create_table_weather (syntax error at or near "("
LINE 4:                     current_temperature(C) VARCHAR(200),
                                               ^
; 12421)
[2023-06-05T17:57:25.046+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-06-05T17:57:25.085+0000] {taskinstance.py:2585} INFO - 0 downstream tasks scheduled from follow-on schedule check
